feat: Enhance UnifiedJUnit5Listener to support additional test frameworks and improve unique ID parsing
- Refactored class name extraction to include support for "spec" and "feature" segments.
- Improved method name extraction to handle "feature" and "scenario" segments.
- Added a utility method `extractSegment` for cleaner code.

test: Add functional tests for Spock and Cucumber frameworks

- Implemented tests to verify detection and reporting for Spock and Cucumber projects.
- Ensured that generated reports contain expected framework names and test results.

test: Update Allure report integration tests with additional metadata

- Enhanced mock result files to include more detailed information such as status details and attachments.
- Verified that Allure report reader correctly processes new fields.

test: Improve HTML report generation tests for better coverage

- Updated assertions to check for new report sections and metadata.
- Added tests for rendering Allure-like evidence and screenshots in HTML reports.

feat: Introduce Grafana dashboard generator for test run health monitoring

- Created `GrafanaDashboardGenerator` to generate JSON dashboards for Grafana.
- Added panels for test summary, failure traces, and flaky tests.

test: Implement tests for Grafana dashboard generation

- Verified that the generated dashboard JSON includes necessary fields and panels.

feat: Add OpenTelemetry exporter with soft failure handling

- Implemented `OpenTelemetryExporter` to allow exporting test results to OpenTelemetry.
- Ensured that missing endpoint does not cause test failures.

test: Add tests for OpenTelemetry exporter functionality

- Verified that the exporter handles missing endpoints gracefully without throwing exceptions.